internal/k8s/testdata/configmap-content-change.yaml
apiVersion: v1
data:
  file: aGVsbG8=
kind: ConfigMap
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"file":"aGVsbG8="},"kind":"ConfigMap","metadata":{"annotations":{},"creationTimestamp":null,"name":"my-configmap","namespace":"default"}}
  creationTimestamp: "2023-02-09T10:43:43Z"
  name: my-configmap
  namespace: default
  resourceVersion: "62125"
  uid: b6e2da92-1b70-4c76-aac7-a2169e9b49b3
---
apiVersion: v1
data:
  file: d29ybGQ=
kind: ConfigMap
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"file":"d29ybGQ="},"kind":"ConfigMap","metadata":{"annotations":{},"creationTimestamp":null,"name":"my-configmap","namespace":"default"}}
  creationTimestamp: "2023-02-09T10:43:43Z"
  name: my-configmap
  namespace: default
  resourceVersion: "62159"
  uid: b6e2da92-1b70-4c76-aac7-a2169e9b49b3
