internal/k8s/testdata/secret-metadata-change.yaml
apiVersion: v1
data:
  file: d29ybGQ=
kind: Secret
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"file":"d29ybGQ="},"kind":"Secret","metadata":{"annotations":{},"creationTimestamp":null,"name":"my-secret","namespace":"default"}}
  creationTimestamp: "2023-02-09T10:43:43Z"
  name: my-secret
  namespace: default
  resourceVersion: "62159"
  uid: b6e2da92-1b70-4c76-aac7-a2169e9b49b3
type: Opaque
---
apiVersion: v1
data:
  file: d29ybGQ=
kind: Secret
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"file":"d29ybGQ="},"kind":"Secret","metadata":{"annotations":{},"creationTimestamp":null,"name":"my-secret","namespace":"default"}}
    my-annotation: foo
  creationTimestamp: "2023-02-09T10:43:43Z"
  labels:
    my-label: bar
  name: my-secret
  namespace: default
  resourceVersion: "72965"
  uid: b6e2da92-1b70-4c76-aac7-a2169e9b49b3
type: Opaque
