internal/k8s/testdata/service-annotation-change.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"echoserver","namespace":"default"},"spec":{"ports":[{"name":"http","port":80,"targetPort":"http-api"}],"selector":{"app.kubernetes.io/name":"echoserver"}}}
    projectcontour.io/max-connections: "2048"
  creationTimestamp: "2023-02-09T14:55:33Z"
  name: echoserver
  namespace: default
  resourceVersion: "206553"
  uid: e3718d68-c0db-47a0-9d84-87cd525cccd6
spec:
  clusterIP: 10.96.24.18
  clusterIPs:
  - 10.96.24.18
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"echoserver","namespace":"default"},"spec":{"ports":[{"name":"http","port":80,"targetPort":"http-api"}],"selector":{"app.kubernetes.io/name":"echoserver"}}}
  creationTimestamp: "2023-02-09T14:55:33Z"
  name: echoserver
  namespace: default
  resourceVersion: "206580"
  uid: e3718d68-c0db-47a0-9d84-87cd525cccd6
spec:
  clusterIP: 10.96.24.18
  clusterIPs:
  - 10.96.24.18
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
